# cfgopt

./: .clang-format  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.txt  cfgopt.toml  cfgopt_gen.h  main.c  maskfile.md
lib/c/: .gitignore  CMakeLists.txt  Makefile  cfgopt.c  cfgopt.h  cfgopt_gen.h  cfgopt_test.c
lib/c/include/: cfgopt.h
lib/c/src/: cfgopt.c  cfgopt_inner.h
lib/c/tests/: cfgopt_example.c  cfgopt_gen.h  cfgopt_test.c
scripts/: c-configure  c-test
src/: main.rs
templates/: app.txt  c.txt
